// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Attendance: Tracks daily attendance of employees.
Employee: Represents an employee in the organization.
Department: Represents a department within the organization.
EmployeeBenefit: Stores benefits information for each employee.
EmployeeLocation: Junction table managing employee location assignments.
Location: Represents a location where an employee is based or works.
EmployeeProject: Junction table to manage assignment of employees to projects.
Project: Represents a project that employees can be assigned to.
EmployeeShift: Junction table for assigning employees to shifts.
Shift: Represents different work shifts.
EmployeeTeam: Junction table managing the association of employees to teams.
Team: Represents a team within a department.
EmployeeTraining: Junction table for managing employee enrollments in training programs.
TrainingProgram: Represents a training program available to employees.
EquipmentAssignment: Tracks equipment assigned to employees.
Holiday: Represents holidays that may affect absence records.
LeaveBalance: Tracks the leave balance for each employee.
OvertimeRecord: Records details of employee overtime work.
PerformanceReview: Stores records of employee performance reviews.
TravelRecord: Tracks employee travel activities.
'''
}

Table Attendance {
    id INTEGER [primary key]
    employee_id INTEGER 
    date DATETIME 
    status VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    hire_date DATETIME 
    }

Table Department {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table EmployeeBenefit {
    id INTEGER [primary key]
    employee_id INTEGER 
    benefit_type VARCHAR 
    description TEXT 
    }

Table EmployeeLocation {
    id INTEGER [primary key]
    employee_id INTEGER 
    location_id INTEGER 
    }

Table Location {
    id INTEGER [primary key]
    name VARCHAR 
    address TEXT 
    }

Table EmployeeProject {
    id INTEGER [primary key]
    employee_id INTEGER 
    project_id INTEGER 
    }

Table Project {
    id INTEGER [primary key]
    name VARCHAR 
    deadline DATETIME 
    }

Table EmployeeShift {
    id INTEGER [primary key]
    employee_id INTEGER 
    shift_id INTEGER 
    }

Table Shift {
    id INTEGER [primary key]
    shift_name VARCHAR 
    start_time DATETIME 
    end_time DATETIME 
    }

Table EmployeeTeam {
    id INTEGER [primary key]
    employee_id INTEGER 
    team_id INTEGER 
    }

Table Team {
    id INTEGER [primary key]
    name VARCHAR 
    department_id INTEGER 
    }

Table EmployeeTraining {
    id INTEGER [primary key]
    employee_id INTEGER 
    training_program_id INTEGER 
    }

Table TrainingProgram {
    id INTEGER [primary key]
    name VARCHAR 
    description TEXT 
    }

Table EquipmentAssignment {
    id INTEGER [primary key]
    employee_id INTEGER 
    equipment_name VARCHAR 
    assignment_date DATETIME 
    }

Table Holiday {
    id INTEGER [primary key]
    name VARCHAR 
    date DATETIME 
    }

Table LeaveBalance {
    id INTEGER [primary key]
    employee_id INTEGER 
    sick_leave FLOAT 
    vacation_leave FLOAT 
    }

Table OvertimeRecord {
    id INTEGER [primary key]
    employee_id INTEGER 
    date DATETIME 
    hours FLOAT 
    }

Table PerformanceReview {
    id INTEGER [primary key]
    employee_id INTEGER 
    review_date DATETIME 
    score FLOAT 
    }

Table TravelRecord {
    id INTEGER [primary key]
    employee_id INTEGER 
    destination VARCHAR 
    travel_date DATETIME 
    }



// Relationships
    Ref: Attendance.(employee_id) < Employee.(id)
    Ref: EmployeeBenefit.(employee_id) < Employee.(id)
    Ref: EmployeeLocation.(employee_id) < Employee.(id)
    Ref: EmployeeLocation.(location_id) < Location.(id)
    Ref: EmployeeProject.(employee_id) < Employee.(id)
    Ref: EmployeeProject.(project_id) < Project.(id)
    Ref: EmployeeShift.(employee_id) < Employee.(id)
    Ref: EmployeeShift.(shift_id) < Shift.(id)
    Ref: EmployeeTeam.(employee_id) < Employee.(id)
    Ref: EmployeeTeam.(team_id) < Team.(id)
    Ref: Team.(department_id) < Department.(id)
    Ref: EmployeeTraining.(employee_id) < Employee.(id)
    Ref: EmployeeTraining.(training_program_id) < TrainingProgram.(id)
    Ref: EquipmentAssignment.(employee_id) < Employee.(id)
    Ref: LeaveBalance.(employee_id) < Employee.(id)
    Ref: OvertimeRecord.(employee_id) < Employee.(id)
    Ref: PerformanceReview.(employee_id) < Employee.(id)
    Ref: TravelRecord.(employee_id) < Employee.(id)
